# RAG-System

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/: embedding.py  search.py  vectorstore.py
